{
  "version": 4,
  "terraform_version": "1.14.1",
  "serial": 16,
  "lineage": "71a11c57-0e6c-d089-a4c7-0b73659703ce",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09f1dfaadb7e81cf1",
            "domain": "vpc",
            "id": "eipalloc-09f1dfaadb7e81cf1",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-52-205-25-58.compute-1.amazonaws.com",
            "public_ip": "52.205.25.58",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "Shivansh_Chaurasia_nat_eip"
            },
            "tags_all": {
              "Name": "Shivansh_Chaurasia_nat_eip"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:404692824390:internet-gateway/igw-06127856285a03d9d",
            "id": "igw-06127856285a03d9d",
            "owner_id": "404692824390",
            "tags": {
              "Name": "Shivansh_Chaurasia_igw"
            },
            "tags_all": {
              "Name": "Shivansh_Chaurasia_igw"
            },
            "vpc_id": "vpc-0ac47102ce46b6996"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09f1dfaadb7e81cf1",
            "association_id": "eipassoc-06ffa4f6008efae3a",
            "connectivity_type": "public",
            "id": "nat-0ce6edb42b4576809",
            "network_interface_id": "eni-05c68ba23b086759b",
            "private_ip": "10.0.1.99",
            "public_ip": "52.205.25.58",
            "subnet_id": "subnet-0af1aa60827a3f5e1",
            "tags": {
              "Name": "Shivansh_Chaurasia_nat"
            },
            "tags_all": {
              "Name": "Shivansh_Chaurasia_nat"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.public_a",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:404692824390:route-table/rtb-0f81694d765492c54",
            "id": "rtb-0f81694d765492c54",
            "owner_id": "404692824390",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0ce6edb42b4576809",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Shivansh_Chaurasia_private_rt"
            },
            "tags_all": {
              "Name": "Shivansh_Chaurasia_private_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ac47102ce46b6996"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat",
            "aws_subnet.public_a",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:404692824390:route-table/rtb-027d2b1ade750042a",
            "id": "rtb-027d2b1ade750042a",
            "owner_id": "404692824390",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06127856285a03d9d",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Shivansh_Chaurasia_public_rt"
            },
            "tags_all": {
              "Name": "Shivansh_Chaurasia_public_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ac47102ce46b6996"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-059078312da570309",
            "route_table_id": "rtb-0f81694d765492c54",
            "subnet_id": "subnet-0a06cc8a215555972"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private_a",
            "aws_subnet.public_a",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b5c4bf998fc220e2",
            "route_table_id": "rtb-0f81694d765492c54",
            "subnet_id": "subnet-032784fa9048eb0d6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private_b",
            "aws_subnet.public_a",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a52dadd7bce702ed",
            "route_table_id": "rtb-027d2b1ade750042a",
            "subnet_id": "subnet-0af1aa60827a3f5e1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public_a",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b6ee6c34c927a0fd",
            "route_table_id": "rtb-027d2b1ade750042a",
            "subnet_id": "subnet-07a34a92d44427c9e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public_b",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:404692824390:subnet/subnet-0a06cc8a215555972",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a06cc8a215555972",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "404692824390",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Shivansh_Chaurasia_private_a"
            },
            "tags_all": {
              "Name": "Shivansh_Chaurasia_private_a"
            },
            "vpc_id": "vpc-0ac47102ce46b6996"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:404692824390:subnet/subnet-032784fa9048eb0d6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-032784fa9048eb0d6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "404692824390",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Shivansh_Chaurasia_private_b"
            },
            "tags_all": {
              "Name": "Shivansh_Chaurasia_private_b"
            },
            "vpc_id": "vpc-0ac47102ce46b6996"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:404692824390:subnet/subnet-0af1aa60827a3f5e1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0af1aa60827a3f5e1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "404692824390",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Shivansh_Chaurasia_public_a"
            },
            "tags_all": {
              "Name": "Shivansh_Chaurasia_public_a"
            },
            "vpc_id": "vpc-0ac47102ce46b6996"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:404692824390:subnet/subnet-07a34a92d44427c9e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07a34a92d44427c9e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "404692824390",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Shivansh_Chaurasia_public_b"
            },
            "tags_all": {
              "Name": "Shivansh_Chaurasia_public_b"
            },
            "vpc_id": "vpc-0ac47102ce46b6996"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:404692824390:vpc/vpc-0ac47102ce46b6996",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0778ae15fdee67380",
            "default_route_table_id": "rtb-0419adb990ef81d1b",
            "default_security_group_id": "sg-0fc4768ee728428d3",
            "dhcp_options_id": "dopt-05a961a6181fd7ddb",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ac47102ce46b6996",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0419adb990ef81d1b",
            "owner_id": "404692824390",
            "tags": {
              "Name": "Shivansh_Chaurasia_vpc"
            },
            "tags_all": {
              "Name": "Shivansh_Chaurasia_vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}